# payday2-tools-rust

./: .gitignore  Cargo.toml  README.md  notes.md
.github/workflows/: rust.yml
blender-addon-dieselmodel/: __init__.py  diesel_hash.py  fmd_read.py  pd2tools_fdm.pyd
blender/fdm_python/: Cargo.toml
blender/fdm_python/src/: bpy.rs  gather_from_blender.rs  ir_blender.rs  ir_reader.rs  ir_reader_fdm.rs  ir_reader_oil.rs  ir_writer_oil.rs  lib.rs  mesh.rs  mesh2.rs  model_ir.rs  py_ir.rs  py_ir_reader_fdm.rs
blender/io_scene_diesel/: __init__.py
bundlefs/: Cargo.toml
bundlefs/src/: main.rs
diesel_hash/: Cargo.toml
diesel_hash/src/: hash.rs  lib.rs
doc/: object_database.md
fdm_python/: Cargo.toml
fdm_python/src/: fdm_bridge.rs  fdm_to_meshoid.rs  ir_reader.rs  lib.rs  meshoid.rs  py_ir.rs
macros/: Cargo.toml
macros/src/: binaryreader.rs  lib.rs
scriptdata/: Cargo.toml
scriptdata/src/: custom.rs  document.rs  generic.rs  generic2.rs  lib.rs  lua_like.pest  lua_like.rs  lua_like_chumsky.rs  reference_tree.rs
src/: diesel_hash.rs  hashindex.rs  hashlist_scan.rs  lib.rs  main.rs  notation_rs.rs  read_util.rs  testfs.rs  util.rs
src/bundles/: bundledb_reader.rs  database.rs  loader.rs  mod.rs  packageheader_reader.rs
src/diesel_hash/: hash_nonconst.rs  hashlist.rs  mod.rs
src/filesystem/: key_to_path.rs  mod.rs  raw_bundledb.rs  teststub.rs  transcoder.rs
src/formats/: banksinfo.rs  fdm.rs  font.rs  mod.rs  oil.rs  player_save.rs  string_table.rs  xml.rs
src/formats/fdm/: container.rs
src/formats/oil/: document.rs
src/formats/scriptdata/: binary.rs  custom_xml.rs  document.rs  generic_xml.rs  id_tracker.rs  lua_like.rs  mod.rs
src/hashlist_scan/: bruteforce.rs  cubelights.rs  scriptdata.rs  soundbanks.rs  xml.rs
src/util/: binaryreader.rs  iter.rs  mod.rs  ordered_float.rs  parse_helpers.rs  rc_cell.rs  read_helpers.rs  subslice.rs
steam/: Cargo.toml
steam/src/: lib.rs  libraryfolders.rs  vdf.rs
xmlparser/: Cargo.toml
xmlparser/src/: lib.rs  xmlchar.rs
xmlparser/tests/: comments.rs  elements.rs  pi.rs
