[package]
name = "pd2tools-rust"
version = "0.1.0"
authors = ["Kythyria Tieran <kythyria@berigora.net>"]
edition = "2018"
default-run = "pd2tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
debug = 1

[features]
default = []

[dependencies]
fnv = "1.0.7"
clap = "2.33.3"
xmlwriter = "0.1.0"
rayon = "1.5.0"
xmlparser = "0.13.3"
chrono = "0.4"
roxmltree = "0.14.0"
anyhow = "1.0.39"
structopt = "0.3.21"
nom = "6.1.2"
vek = "0.15.1"
num-traits = "0.2.14"
git-version = "0.3.5"
thiserror = "1.0.30"

pd2tools-macros = { path = './macros' }
diesel_hash = { path = './diesel_hash' }
steam = { path = "./steam" }
scriptdata = { path = "./scriptdata" }

[workspace]
members = [ "xmlparser", "blender/fdm_python", "macros", "diesel_hash", "bundlefs", "steam", "scriptdata" ]

[patch.crates-io]
xmlparser = { path = 'xmlparser' }
