[package]
name = "pd2tools-rust"
version = "0.1.0"
authors = ["Kythyria Tieran <kythyria@berigora.net>"]
edition = "2021"
default-run = "pd2tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
debug = 1

[features]
default = []

[dependencies]
fnv = "1.0.7"
clap = "2.33.3"
xmlwriter = "0.1.0"
rayon = "1.5.0"
xmlparser = "0.13.3"
chrono = "0.4"
roxmltree = "0.14.0"
anyhow = "1.0.39"
structopt = "0.3.21"
nom = "6.1.2"
vek = { version = "0.15.10", features = [ "bytemuck" ] }
num-traits = "0.2.14"
git-version = "0.3.5"
thiserror = "1.0.30"
slotmap = "1.0.6"

pd2tools-macros = { path = './macros' }
steam = { path = "./steam" }
scriptdata = { path = "./scriptdata" }
gc = { version = "0.4.1", features = ["derive"] }

[workspace]
members = [ "xmlparser", "blender/fdm_python", "macros", "bundlefs", "steam", "scriptdata" ]

[patch.crates-io]
xmlparser = { path = 'xmlparser' }
