[package]
name = "pd2tools-bundlefs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pd2tools-rust = { path = ".." }
steam = { path = "../steam" }

dokan = "0.1.0"
structopt = "0.3.21"
widestring = "0.4.3"
winapi = "0.3.9"