[package]
name = "pd2tools-fdm-python"
version = "0.1.0"
authors = ["Kythyria Tieran <kythyria@berigora.net>"]
edition = "2018"

[lib]
name="pd2tools_fdm"
crate_type = ["cdylib"]

[dependencies.pyo3]
#version = "0.13.2"
git = "https://github.com/PyO3/pyo3"
branch = "main"
features = ["extension-module", "abi3-py36"]

[dependencies]
pd2tools-rust = { path = ".." }
pd2tools-macros = { path = "../macros" }
vek = "0.15.1"
nom = "6.1.2"
thiserror = "1.0.25"