[package]
name = "scriptdata"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.14.0"
thiserror = "1.0.30"
vek = "0.15.1"
xmlparser = "0.13.3"
xmlwriter = "0.1.0"
either = "1.6.1"
logos = "0.12.0"
pest = "2.1.3"
pest_derive = "2.1.0"
chumsky = "0.8.0"
ego-tree = "0.6.2"

pd2tools-macros = { path = '../macros' }
diesel_hash = { path = '../diesel_hash' }