[package]
name = "steam"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
thiserror = "1.0.30"

[target.'cfg(windows)'.dependencies]
#winapi = "0.3.9"
widestring = "0.4.3"
registry = "1.2.0"
