[package]
name = "pd2tools-fdm-python"
version = "0.1.0"
authors = ["Kythyria Tieran <kythyria@berigora.net>"]
edition = "2018"

[lib]
name="pd2tools_fdm"
crate_type = ["cdylib"]

[dependencies.pyo3]
version = "0.17.0"
#git = "https://github.com/PyO3/pyo3"
#branch = "main"
features = ["extension-module", "abi3-py37"]

[dependencies]
pd2tools-rust = { path = "../.." }
pd2tools-macros = { path = "../../macros" }
vek = "0.15.1"
slotmap = "1.0.6"
thiserror = "1.0.25"
itertools = "0.10.3"
enumflags2 = "0.7.5"